--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     --secondary-stripe-rgb: 240 240 240;
     --base-background-color: 227, 163, 34;
     --base-fog-color: 255, 217, 94;
+    --button-text-color: 0 0 0;
 }
 
 * { cursor: none !important; }
@@ -87,6 +88,10 @@ body {
 .center-class {
     align-items: center;
     justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
 }
 
@@ -134,7 +139,16 @@ body {
 }
 
 .content-frame {
-    
+    background-color: rgba(40, 40, 40, 0.75);
+    border-radius: 1rem;
+    border: 0.4rem solid rgb(30 30 30);
+    min-width: 50%;
+    min-height: 500px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* SOURIS */
@@ -189,7 +203,7 @@ body {
     z-index: 501;
     padding: 10px 20px;
     font-size: 1.5rem;
-    color: pink;
+    color: rgb(var(--button-text-color));
 }
 
 #navbar-container {
@@ -308,7 +322,7 @@ body {
 #navbar li a {
     margin-top: -32px;
     margin-left: -150px;
-    color: pink;
+    color: rgb(var(--button-text-color));
     font-size: 1.5rem;
     padding: 10px 20px;
 }
@@ -386,8 +400,16 @@ body {
 /* SECTION PROFIL */
 
 .section-Profil {
-    background-color: rgba(80, 96, 177, 0.11);
-    height: 100vh;
+    overflow-y: scroll;
+}
+
+.position-change-frame {
+    position: relative;
+    width: 70%;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, 30px);
+    margin-bottom: 50px;
 }
 
 .profile-photo {
@@ -404,6 +426,7 @@ body {
 
 .section-Projets {
     overflow-y: scroll;
+    padding-top: 20px;
 }
 
 #filter-buttons {
@@ -416,22 +439,16 @@ body {
 .filter-btn {
     padding: 10px 20px;
     font-size: 1rem;
-    background: rgba(120, 120, 120);
-    color: white;
+    background: white;
+    color: black;
     border-radius: 5px;
     transition: all 0.3s ease;
     text-align: center;
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+    border-radius: 0.8rem;
     border: 0.3rem solid rgb(30 30 30);
 }
 
 .filter-btn:hover {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6),
-                0 0 20px rgba(255, 255, 255, 0.4),
-                0 0 30px rgba(255, 255, 255, 0.2);
     background: rgba(80 80 80);
 }
 
@@ -441,9 +458,6 @@ body {
 }
 
 .filter-btn.active:hover {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6),
-                0 0 20px rgba(255, 255, 255, 0.4),
-                0 0 30px rgba(255, 255, 255, 0.2);
     background: rgba(80 80 80);
 }
 
@@ -462,7 +476,7 @@ body {
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     height: 360px;
     width: 300px;  
@@ -532,7 +546,7 @@ body {
 
 .card-categories {
     margin: 5px;
-    color: green;
+    color: black;
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
@@ -545,12 +559,10 @@ body {
     background: transparent;
     padding: 5px 10px;
     border: 0.1rem solid rgb(120 120 120);
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+    border-radius: 0.8rem;
     margin-top: 2px;
     margin-bottom: 2px;
+    background-color: rgb(180 180 180);
 }
 
 /* Popup container */
@@ -560,7 +572,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), transparent);
+    background: linear-gradient(to bottom, rgba(50, 50, 50, 0.7), transparent);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -596,7 +608,7 @@ body {
     right: 20px;
     padding: 10px 20px;
     font-size: 2rem;
-    color: pink;
+    color: rgb(var(--button-text-color));
 }
 
 .popup.show {
@@ -630,8 +642,7 @@ body {
 /* SECTION EPREUVE */
 
 .section-Epreuve {
-    background-color: rgba(202, 185, 91, 0.11);
-    height: 100vh;
+    overflow-y: scroll;
 }
 
 .table-picture {
@@ -652,6 +663,10 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 100vh;
+}
+
+.contact-frame {
+    height: 800px;
 }
 
 #section-Contact form {
@@ -721,7 +736,7 @@ body {
     font-size: 1.8rem;
     font-weight: bold;
     text-align: center;
-    color: rgb(255, 0, 0);
+    color: black;
     margin-top: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -739,22 +754,3 @@ a {
     color: white;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
-
-/* SCROLLBAR */
-
-/* ::-webkit-scrollbar {
-    width: .5rem;
-    height: 5px;
-} */
-
-/* Track */
-/* ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 1px white;
-    border-radius: 10px;
-} */
-
-/* Handle */
-/* ::-webkit-scrollbar-thumb {
-    background: grey;
-    border-radius: 10px;
-} */
