--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --base-fog-color: #353458;
     --button-text-color: rgb(0 0 0);
     --base-text-color: rgb(240 240 240);
+    --dark-background-color: #282828bf;
 }
 
 * { cursor: none !important; }
@@ -29,7 +30,7 @@
     }
 }
 
-.nav-link:is(:hover, :focus-visible) .modal-action-text-letter {
+.bouncing-letters:is(:hover, :focus-visible) .modal-action-text-letter {
     animation: bounce infinite;
 }
 
@@ -48,6 +49,7 @@ body {
     overflow: auto;
     max-width:100vw;
     margin: 0;
+    border-spacing: 0px;
     font-family: Arial, sans-serif;
 }
 
@@ -112,7 +114,7 @@ body {
     position: absolute;
     width: 50px;
     height: 50px;
-    opacity: 2.5%;
+    opacity: 4%;
     filter: brightness(0) invert(1);
     animation: moveImages 10s linear infinite;
     z-index: 30;
@@ -141,17 +143,32 @@ body {
 }
 
 .content-frame {
-    background-color: #282828bf;
+    background-color: var(--dark-background-color);
     border-radius: 1rem;
-    border: 0.4rem solid #1e1e1e;
+    border: 0.1rem solid var(--base-text-color 10%);
     min-width: 50%;
     min-height: 200px;
-    margin: 0;
+    margin: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 5px 0px #1e1e1e;
+    box-shadow: 0 0 2px 0px var(--base-text-color);
+    padding: 20px;
+}
+
+.position-change-frame {
+    position: relative;
+    width: 70%;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%);
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.first-frame {
+    margin-top: 150px;
 }
 
 /* SOURIS */
@@ -208,93 +225,18 @@ body {
     font-size: 1.5rem;
     color: var(--button-text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
-    box-shadow: 0 0 5px 20px (transparent 50% red);
-}
-
-#navbar-container {
-    padding-bottom: 4px;
-    position: fixed;
-    z-index: 500;
-    top: -130px;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    transition: top 0.3s ease;
-    background-color: #ffffff;
-    
-    clip-path: polygon(
-        0% 0%, 100% 0%, 100% 100%,
-        98.75% 90%, 97.5% 100%, 96.25% 90%, 
-        95% 100%, 93.75% 90%, 92.5% 100%, 
-        91.25% 90%, 90% 100%, 88.75% 90%, 
-        87.5% 100%, 86.25% 90%, 85% 100%, 
-        83.75% 90%, 82.5% 100%, 81.25% 90%, 
-        80% 100%, 78.75% 90%, 77.5% 100%, 
-        76.25% 90%, 75% 100%, 73.75% 90%, 
-        72.5% 100%, 71.25% 90%, 70% 100%, 
-        68.75% 90%, 67.5% 100%, 66.25% 90%, 
-        65% 100%, 63.75% 90%, 62.5% 100%, 
-        61.25% 90%, 60% 100%, 58.75% 90%, 
-        57.5% 100%, 56.25% 90%, 55% 100%, 
-        53.75% 90%, 52.5% 100%, 51.25% 90%, 
-        50% 100%, 48.75% 90%, 47.5% 100%, 
-        46.25% 90%, 45% 100%, 43.75% 90%, 
-        42.5% 100%, 41.25% 90%, 40% 100%, 
-        38.75% 90%, 37.5% 100%, 36.25% 90%, 
-        35% 100%, 33.75% 90%, 32.5% 100%, 
-        31.25% 90%, 30% 100%, 28.75% 90%, 
-        27.5% 100%, 26.25% 90%, 25% 100%, 
-        23.75% 90%, 22.5% 100%, 21.25% 90%, 
-        20% 100%, 18.75% 90%, 17.5% 100%, 
-        16.25% 90%, 15% 100%, 13.75% 90%, 
-        12.5% 100%, 11.25% 90%, 10% 100%, 
-        8.75% 90%, 7.5% 100%, 6.25% 90%, 
-        5% 100%, 3.75% 90%, 2.5% 100%, 
-        1.25% 90%, 0% 100%
-    );
 }
 
 #navbar {
 
     position: fixed;
     z-index: 500;
-    top: -130px;
+    top: -155px;
     left: 0;
     width: 100%;
     height: 150px;
     transition: top 0.3s ease;
     background-color: var(--stripe-primary-rgb);
-    
-    clip-path: polygon(
-        0% 0%, 100% 0%, 100% 100%,
-        98.75% 90%, 97.5% 100%, 96.25% 90%, 
-        95% 100%, 93.75% 90%, 92.5% 100%, 
-        91.25% 90%, 90% 100%, 88.75% 90%, 
-        87.5% 100%, 86.25% 90%, 85% 100%, 
-        83.75% 90%, 82.5% 100%, 81.25% 90%, 
-        80% 100%, 78.75% 90%, 77.5% 100%, 
-        76.25% 90%, 75% 100%, 73.75% 90%, 
-        72.5% 100%, 71.25% 90%, 70% 100%, 
-        68.75% 90%, 67.5% 100%, 66.25% 90%, 
-        65% 100%, 63.75% 90%, 62.5% 100%, 
-        61.25% 90%, 60% 100%, 58.75% 90%, 
-        57.5% 100%, 56.25% 90%, 55% 100%, 
-        53.75% 90%, 52.5% 100%, 51.25% 90%, 
-        50% 100%, 48.75% 90%, 47.5% 100%, 
-        46.25% 90%, 45% 100%, 43.75% 90%, 
-        42.5% 100%, 41.25% 90%, 40% 100%, 
-        38.75% 90%, 37.5% 100%, 36.25% 90%, 
-        35% 100%, 33.75% 90%, 32.5% 100%, 
-        31.25% 90%, 30% 100%, 28.75% 90%, 
-        27.5% 100%, 26.25% 90%, 25% 100%, 
-        23.75% 90%, 22.5% 100%, 21.25% 90%, 
-        20% 100%, 18.75% 90%, 17.5% 100%, 
-        16.25% 90%, 15% 100%, 13.75% 90%, 
-        12.5% 100%, 11.25% 90%, 10% 100%, 
-        8.75% 90%, 7.5% 100%, 6.25% 90%, 
-        5% 100%, 3.75% 90%, 2.5% 100%, 
-        1.25% 90%, 0% 100%
-    );
 }
 
 #stripe-pattern {
@@ -313,6 +255,8 @@ body {
     );
     box-shadow: inset 0rem 0.5rem 2rem 0.25rem rgb(0 0 0 / 40%);
     animation: pan 360s linear infinite;
+    border-bottom: 0.1rem solid var(--base-text-color);
+    box-shadow: 0 0 2px 0px var(--base-text-color);
 }
 
 #navbar ul {
@@ -409,22 +353,51 @@ body {
     overflow-y: scroll;
 }
 
-.position-change-frame {
-    position: relative;
-    width: 70%;
-    top: 0%;
-    left: 50%;
-    transform: translate(-50%, 30px);
-    margin-bottom: 50px;
+.about-table {
+    width: 80%;
+    table-layout: fixed;
+    margin-left: 10%;
+    margin-bottom: 25px;
+}
+
+.td-image {
+    width: 33%;
+}
+
+.about-table .image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.about-table .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .profile-photo {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 20px;
-    border: 3px solid white;
+}
+
+.td-text {
+    width: 67%;
+}
+
+.about-table  .text-container {
+    display: flexbox;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;width: 90%;
+
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .profile-container h3 {
@@ -439,6 +412,12 @@ body {
 .profile-container p {
     margin: 0px;
     margin-bottom: 10px;
+}
+
+.less-width {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 
@@ -483,7 +462,9 @@ body {
 }
 
 .filter-btn.active {
-    background-color: rgba(200 200 200);
+    /* background-color: rgba(200 200 200); */
+    outline: 0.2rem solid #007bff;
+    /* outline-offset: 0.2rem; */
 }
 
 .filter-btn.active:hover {
@@ -511,7 +492,7 @@ body {
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: var(--dark-background-color);
     display: flex;
     height: 360px;
     width: 300px;  
@@ -523,15 +504,15 @@ body {
     border-bottom-left-radius: 3rem;
     border-top-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    border: 0.4rem solid rgb(30 30 30);
-    box-shadow: 0 0 5px 0px #1e1e1e;
+    border: 0.1rem solid var(--base-text-color);
+    box-shadow: 0 0 2px 0px var(--base-text-color);
 }
 
 .card:hover {
     transform: scale(1.05);
     z-index: 200;
-    border: 0.4rem solid rgb(120 120 120);
-    background-color: rgba(70, 70, 70, 0.7);
+    border: 0.1rem solid rgb(120 120 120);
+    box-shadow: 0 0 2px 0px var(--base-text-color);
 }
 
 .card > .card-content {
@@ -608,7 +589,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(80, 80, 80, 0.7), transparent);
+    background: linear-gradient(to bottom, var(--base-fog-color) -5%, transparent);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -619,7 +600,7 @@ body {
 
 /* Contenu de la popup */
 .popup-content {
-    background: rgba(120, 120, 120, 0.9);
+    background-color: var(--dark-background-color);
     border-radius: 2rem;
     padding: 20px;
     text-align: center;
@@ -627,7 +608,7 @@ body {
     width: 70%;
     height: 70%;
     max-width: 90%;
-    border: 0.4rem solid rgb(30 30 30);
+    border: 0.1rem solid var(--base-text-color);
 }
 
 .popup-content h1 {
@@ -792,9 +773,18 @@ p {
     color: var(--base-text-color);
 }
 
+.text-justify {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 a {
     font-weight: bold;
     text-decoration: none;
-    color: white;
+    color: var(--base-text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.bold-text {
+    font-weight: bold;
 }
