--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,13 @@
 
 html {
     overflow:visible;
+    cursor: none;
 }
 
 body {
     background: linear-gradient(to right bottom, #2b2a44, #353458);
     cursor: none;
-    overflow: auto;
+    overflow: hidden;
     max-width:100vw;
     margin: 0;
     border-spacing: 0px;
@@ -112,8 +113,8 @@ body {
 
 .pattern-image {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 5vh;
+    height: 5vh;
     opacity: 4%;
     filter: brightness(0) invert(1);
     animation: moveImages 10s linear infinite;
@@ -171,6 +172,19 @@ body {
     margin-top: 150px;
 }
 
+.less-width {
+    width: 90% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+}
+
+.lesser-width {
+    width: 80% !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+}
+
+
 /* SOURIS */
 
 #magic-mouse-container {
@@ -191,6 +205,7 @@ body {
     border-radius: 50%;
     pointer-events: none;
     z-index: 1000;
+    transform: translate(-5px, -5px);
 }
 
 .glow-point-down {
@@ -201,6 +216,7 @@ body {
     border-radius: 50%;
     pointer-events: none;
     z-index: 1000;
+    transform: translate(-5px, -5px);
 }
 
 #persistent-glow {
@@ -212,6 +228,7 @@ body {
     box-shadow: 0 0 2px 3px black;
     pointer-events: none;
     z-index: 1000;
+    transform: translate(-3px, -3px);
 }
 
 
@@ -308,6 +325,7 @@ body {
         opacity: 0;
     }
 }
+
 .fade-in {
     animation: fadeIn 0.3s forwards;
 }
@@ -414,12 +432,13 @@ body {
     margin-bottom: 10px;
 }
 
-.less-width {
+.organigram-div {
     width: 80%;
+    height: 550px;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 50px;
 }
-
 
 /* SECTION PROJETS */
 
@@ -500,8 +519,8 @@ body {
     position: relative;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border-top-right-radius: 3rem;
-    border-bottom-left-radius: 3rem;
+    border-top-right-radius: 2rem;
+    border-bottom-left-radius: 2rem;
     border-top-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     border: 0.1rem solid var(--base-text-color);
@@ -633,6 +652,7 @@ body {
 .popup.show {
     top: 0;
     animation: popup-slide 0.5s ease-out;
+    backdrop-filter: blur(3px);
 }
 
 .popup.hide {
@@ -658,21 +678,24 @@ body {
 }
 
 
-/* SECTION EPREUVE */
+/* SECTION BTS-SIO */
 
-.section-Epreuve {
+.section-BTS-SIO {
     overflow-y: scroll;
 }
 
 .table-picture {
     align-items: center;
     display: flex;
-    height: 600px;
     min-height: 250px;
-    width: 750px;
+    width: 80%;
+    height: 800px;
     min-width: 250px;
     justify-content: center;
     margin: auto;
+    background-color: var(--base-text-color);
+    overflow: scroll;
+    margin-bottom: 50px;
 }
 
 
