--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ body {
         transform: translateX(0%); /* Position initiale */
     }
     100% {
-        transform: translateX(240%); /* Déplace les images de la largeur du conteneur */
+        transform: translateX(220%); /* Déplace les images de la largeur du conteneur */
     }
 }
 
@@ -502,8 +502,10 @@ body {
     gap: 15px;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 #cards:hover > .card::after {
@@ -554,6 +556,18 @@ body {
     height: 150px;
     min-height: 150px;
     width: 150px;
+    justify-content: center;
+    overflow-y: hidden;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.card-image-wide {
+    align-items: center;
+    display: flex;
+    height: 150px;
+    min-height: 150px;
+    width: 180px;
     justify-content: center;
     overflow-y: hidden;
     margin: auto;
@@ -628,6 +642,12 @@ body {
     height: 70%;
     max-width: 90%;
     border: 0.1rem solid var(--base-text-color);
+    overflow: scroll;
+}
+
+.half-width {
+    width: 50%;
+    translate: 50%;
 }
 
 .popup-content h1 {
@@ -638,6 +658,78 @@ body {
     margin-bottom: 10px;
     font-size: 1.5rem;
 }
+
+.popup-image {
+    max-width: 600px;
+    max-height: 600px;
+}
+
+.popup-small-title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: var(--base-text-color);
+}
+
+.popup-related-skills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    margin: 0 auto;
+    width: 85%;
+}
+
+.skill-card {
+    background-color: transparent;
+    display: flex;
+    height: 180px;
+    width: 150px;  
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 0.5rem;
+    border: 0.1rem solid var(--base-text-color);
+    box-shadow: 0 0 2px 0px var(--base-text-color);
+    opacity: 100%;
+}
+
+.skill-name {
+    height: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.skill-check-cross {
+    height: 25px;
+    width: 25px;
+    padding-left: 5px;
+    position: absolute;
+    bottom: 10px;
+}
+
+.related-skill {
+    opacity: 100%;
+}
+
+.unrelated-skill {
+    opacity: 60%;
+}
+
+.line-skill {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.line-skill::after {
+    content: "";
+    display: block;
+    width: 150;
+    height: 0.1rem;
+    background-color: var(--base-text-color);
+    /* margin: 10px auto 0 auto; */
+  }
 
 .close-btn {
     position: absolute;
