--- a/styles.css
+++ b/styles.css
@@ -715,7 +715,7 @@ body {
     justify-content: center;
 }
 
-.skill-check-cross {
+.skill-check-or-cross {
     height: 25px;
     width: 25px;
     padding-left: 5px;
